<resources>
    <string name="app_name">Quiz Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quit_quiz">Do you want to quit the Quiz !</string>
    <string name="close_app">Do you want to close Quiz app</string>
    <string name="no_internet">Please Connect to the internet and try again</string>
    <string name="yes">Yes</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="loading_your_first_question">Loading your first question ...</string>
    <string name="option_first">Option First</string>
    <string name="option_second">Option Second</string>
    <string name="option_third">Option Third</string>
    <string name="option_fourth">Option Fourth</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="restart">Restart</string>
    <string name="dash">-</string>
    <string name="_caps">YOUR SCORE</string>
    <string name="congratulations">Congratulations!</string>
    <string name="trophy">trophy</string>
    <string name="start_quiz">Start Quiz</string>
</resources>