<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:background="@drawable/background_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_timer"
            android:drawablePadding="10dp"
            android:text=""
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/questionCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:drawableRight="@drawable/ic_question"
            android:drawablePadding="10dp"
            android:text="1/10"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            app:drawableTint="@color/color_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="start|center"
            android:text="@string/loading_your_first_question"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toTopOf="@+id/view5" />


        <TextView
            android:id="@+id/hint_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:text="Please select correct answer from below:"
            android:textColor="@android:color/tertiary_text_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/view5"
            app:layout_constraintStart_toStartOf="@+id/view5"
            app:layout_constraintTop_toBottomOf="@+id/view5" />


        <TextView
            android:id="@+id/option_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/option_unselected"
            android:hint="@string/option_first"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/hint_answer"
            app:layout_constraintStart_toStartOf="@+id/hint_answer"
            app:layout_constraintTop_toBottomOf="@+id/hint_answer" />

        <TextView
            android:id="@+id/option_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:hint="@string/option_second"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/option_1"
            app:layout_constraintStart_toStartOf="@+id/option_1"
            app:layout_constraintTop_toBottomOf="@+id/option_1" />

        <TextView
            android:id="@+id/option_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:hint="@string/option_third"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/option_2"
            app:layout_constraintStart_toStartOf="@+id/option_2"
            app:layout_constraintTop_toBottomOf="@+id/option_2" />

        <TextView
            android:id="@+id/option_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_unselected"
            android:hint="@string/option_fourth"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="@+id/option_3"
            app:layout_constraintStart_toStartOf="@+id/option_3"
            app:layout_constraintTop_toBottomOf="@+id/option_3" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24sp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/btn_back"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/quizBtn"
            app:layout_constraintTop_toBottomOf="@+id/option_4" />

        <Button
            android:id="@+id/quizBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="24sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/btn_back"
            android:text="@string/quit"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toStartOf="@+id/nextBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option_4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
